--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
 	</main>
 	<footer class="clearfix">
-		<h1>2017 &#169; <a href="https://www.linkedin.com/in/stephaniezeng" target="_blank">Gláucio Correia</a></h1>
+		<h1>2017 &#169; <a href=# target="_blank">Gláucio Correia</a></h1>
 		<h1>A Free Code Camp Project</h1>
 	</footer>
 </body>
