Ajustes em Intro / Erro img ainda

--- a/CORREÇÃO/index.html
+++ b/CORREÇÃO/index.html
@@ -20,15 +20,13 @@
 
                 <!--Citação-->
                 <h3 class="quote col-12">
-                    <span>"Maria [Quitéria] de Jesus</span> is illiterate, but lively. She has clear intelligence and acute perception.
+                    "<span style="font-weight: bold">Maria [Quitéria] de Jesus</span> is illiterate, but lively. She has clear intelligence and acute perception.
                     I think that if they educated her, she would become a notable personality. One observes nothing masculine
-                    in her conduct, rather she is of gentle and friendly manners."</h3>
+                    in her conduct, rather she is of gentle and friendly manners."
+                </h3>
                 <!--/Citação-->
                 <!--Autor e origem da fonte da citação-->
-                <h3 class="name col-5 offset-7">-
-                    <strong>Maria Graham, in
-                        <i>Journal of a Voyage to Brazil</i>
-                    </strong>
+                <h3 class="name col-5 offset-7">- Maria Graham, in Journal of a Voyage to Brazil
                 </h3>
                 <!--/Autor e origem da fonte da citação-->
 
@@ -37,8 +35,9 @@
     </header>
     <main>
         <!--SEÇÃO: INTRO-->
-        <section class="intro">
+        <section id="intro">
             <!--Título da seção-->
+            <div class="container">
             <h1>
                 <small>who was</small>
                 <br>
@@ -46,6 +45,8 @@
             </h1>
             <!--/Título da seção-->
             <!--Coluna 1 -->
+            <div class="row">
+            <div class="col-4">
             <p>Maria Quitéria (1792–1853) was a Brazilian lieutenant and national heroine. She served in the Brazilian War of
                 Independence in 1822–23 dressed as a man. She was promoted to cadet and Lieutenant and decorated with the
                 Imperial order. She has been called "Brazilian Joan of Arc,"[1] and has become a kind of national legendary
@@ -60,8 +61,16 @@
                 his wife, Quitéria Maria de Jesus.[5] Although Maria received no formal education, she would have practiced
                 the skills necessary to farming, such as riding, hunting, and using firearms—these skills would serve her
                 in the military as well.</p>
+            </div>
             <!--/Coluna 1-->
+                        <!--Coluna 3 (Imagem)-->
+                        <div class="col-4">
+                                <img id="quiteriabw" src="https://i1.wp.com/assets.papodehomem.com.br/2016/05/04/14/12/57/ae46c0c2-fa7c-4f0f-bf8c-57344be5a25a/heroina.jpg"
+                                    alt="Maria Quiteria">
+                                </div>
+                                <!--/Coluna 3 (Imagem)-->
             <!-- Coluna 2-->
+            <div class="col-4">
             <p>After her time serving in the war, Quitéria married Gabriel Pereira Brito (who was a former lover of hers) and
                 had one daughter with him, named Luisa. A widowed Quitéria died in 1853 in relative obscurity and poverty
                 near Salvador.[6] It was not until years later that her legacy was revived.</p>
@@ -76,12 +85,11 @@
             <p>Visit
                 <a href="https://pt.wikipedia.org/wiki/Maria_Quit%C3%A9ria" target="_blank">here</a> to learn more about this incredible woman (portuguese version) or
                 <a href="https://en.wikipedia.org/wiki/Maria_Quit%C3%A9ria" target="_blank">here</a> (english version).</p>
+            </div>
             <!--/Coluna 2-->
-            <!--Coluna 3 (Imagem)-->
-            <img id="quiteriapb" src="https://i1.wp.com/assets.papodehomem.com.br/2016/05/04/14/12/57/ae46c0c2-fa7c-4f0f-bf8c-57344be5a25a/heroina.jpg"
-                alt="Maria Quiteria">
-            <!--/Coluna 3 (Imagem)-->
 
+            </div>
+            </div>
         </section>
         <!--SEÇÃO: lEGACY-->
         <section class="legacy">
