--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					<p>Visit <a href="https://pt.wikipedia.org/wiki/Maria_Quit%C3%A9ria" target="_blank">here</a> to learn more about this incredible woman (portuguese version) or <a href="https://en.wikipedia.org/wiki/Maria_Quit%C3%A9ria" target="_blank">here</a> (english version).</p>
 				</div>
 				<div class="col-sm-4">
-					<img id="quiteriapb" src="" alt="Maria Quiteria">
+					<img id="quiteriapb img-responsive" src="" alt="Maria Quiteria">
 				</div>
 			</div>
 		</div>
